[package]
name = "addsynth"
version = "0.1.0"
edition = "2021"
authors = ["SolarLiner <solarliner@gmail.com>"]
description = "Additive synth"
license = "GPL-3.0-or-later"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
num-complex = "0.4.2"
rand = "0.8.5"
rand_pcg = "0.3.1"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.dev]
opt-level = 1
